<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/BtnAddUpdate"
            android:text="@string/add_update"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnDelete"
            android:text="@string/button_delete"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <EditText
        android:id="@+id/edtContent"
        android:hint="@string/event_content"
        android:inputType="text"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtGenre"
        android:hint="@string/event_genre"
        android:inputType="text"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtDetail"
        android:hint="@string/event_detail"
        android:inputType="textMultiLine"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/edtStartDate"
            android:hint="@string/event_start_date"
            android:inputType="date"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/btnStartDate"
            android:text="@string/event_date"
            android:onClick="onClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/edtStartTime"
            android:hint="@string/event_start_time"
            android:inputType="time"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/btnStartTime"
            android:text="@string/event_time"
            android:onClick="onClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/edtEndDate"
            android:hint="@string/event_end_date"
            android:inputType="date"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/btnEndDate"
            android:text="@string/event_date"
            android:onClick="onClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/edtEndTime"
            android:hint="@string/event_end_time"
            android:inputType="time"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/btnEndTime"
            android:text="@string/event_time"
            android:onClick="onClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>

    <EditText
        android:id="@+id/edtLevel"
        android:inputType="number"
        android:hint="@string/event_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/edtLocation"
            android:hint="@string/event_location"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/btnLocation"
            android:text="@string/event_location"
            android:onClick="onClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/edtRepeat"
            android:hint="@string/event_repeat"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/btnRepeat"
            android:text="@string/event_repeat"
            android:onClick="onClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerStatus"
        android:hint="@string/event_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
