<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.chaofanz.mycalendar.app.MainActivity">

    <EditText
        android:id="@+id/edtContent"
        android:hint="@string/event_content"
        android:inputType="text"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtDetail"
        android:hint="@string/event_detail"
        android:inputType="textMultiLine"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/edtDate"
            android:hint="@string/event_start_date"
            android:inputType="date"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/btnDate"
            android:hint="@string/event_start"
            android:onClick="onClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/edtTime"
            android:hint="@string/event_start_time"
            android:inputType="time"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/btnTime"
            android:hint="@string/event_start"
            android:onClick="onClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>

    <!--<Spinner-->
        <!--android:id="@+id/spinnerStatus"-->
        <!--android:spinnerMode="dropdown"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
    <!--</Spinner>-->

    <!--<Spinner-->
        <!--android:id="@+id/spinnerRepeat"-->
        <!--android:spinnerMode="dropdown"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
    <!--</Spinner>-->

    <!--<Spinner-->
        <!--android:id="@+id/spinnerLevel"-->
        <!--android:spinnerMode="dropdown"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
    <!--</Spinner>-->

    <!--<DatePicker-->
        <!--android:id="@+id/datepickerStart"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
    <!--</DatePicker>-->

    <!--<DatePicker-->
        <!--android:id="@+id/datepickerEnd"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
    <!--</DatePicker>-->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--<Button-->
            <!--android:text="Create"-->
            <!--android:onClick="createDb"-->
            <!--android:background="#aa0000"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->

        <Button
            android:id="@+id/btnQuery"
            android:text="@string/button_query"
            android:onClick="onClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnAdd"
            android:text="@string/button_add"
            android:onClick="onClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnUpdate"
            android:text="@string/button_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnDelete"
            android:text="@string/button_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <!--<ListView-->
        <!--android:id="@+id/list_view"-->
        <!--android:choiceMode="singleChoice"-->
        <!--android:onClick="onClick"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

    <!--</ListView>-->

    <ListView
        android:id="@+id/eventLv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
